--- a/Hummingbird/Info.plist
+++ b/Hummingbird/Info.plist
@@ -52,6 +52,8 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app will record your hums for other users to hear and guess.</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
